[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/SpritesBblioteca/MapaBiblioteca.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SpritesBblioteca/Spite_num4-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SpritesBblioteca/Sprite_num1-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SpritesBblioteca/Sprite_num3-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SpritesBblioteca/Sprite_num_2-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Node2D.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/SpritesBblioteca/Bibliotecária2Personagem.png" type="Texture" id=8]
[ext_resource path="res://Sprites/SpritesBblioteca/BibliotecárioPersonagem.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Interface/Dialogo/icone_E(2).png" type="Texture" id=11]
[ext_resource path="res://Scenes/Bibliotecário1.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Bibliotecario2.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240.5, 89 )

[node name="Biblioteca" type="Node2D"]
script = ExtResource( 6 )

[node name="MapaBiblioteca" type="Sprite" parent="."]
position = Vector2( 3295, 2448 )
scale = Vector2( 6.758, 6.758 )
texture = ExtResource( 1 )

[node name="SpriteNum1-removebg-preview" type="Sprite" parent="."]
position = Vector2( 696, 2490 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="SpriteNum2-removebg-preview" type="Sprite" parent="."]
position = Vector2( 860, 2485 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="SpriteNum3-removebg-preview" type="Sprite" parent="."]
position = Vector2( 1027, 2488 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="SpiteNum4-removebg-preview" type="Sprite" parent="."]
position = Vector2( 1188, 2490 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 639.0
margin_top = 2453.0
margin_right = 757.0
margin_bottom = 2763.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 811.0
margin_top = 2450.0
margin_right = 916.0
margin_bottom = 2766.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 971.0
margin_top = 2449.0
margin_right = 1085.0
margin_bottom = 2762.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1130.0
margin_top = 2457.0
margin_right = 1250.0
margin_bottom = 2760.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonComputer" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 793.0
margin_top = 1791.0
margin_right = 938.0
margin_bottom = 1898.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3299.5, 3714 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 3569, 3583, 3569, 3838, 3018, 3849, 3029, 3558, 2987, 3388, 1109, 3419, 1103, 3272, 636, 3269, 631, 2766, 1264, 2763, 1261, 1796, 636.191, 1796, 632.685, 1478.59, 944, 1470, 944, 987, 624.948, 993.114, 631, 656, 789, 670, 795, 825, 947, 825, 950, 681, 1117, 687, 1114, 831, 1270, 820, 1263.88, 675.36, 1437, 678, 1439, 823, 1592, 814, 1595, 673, 1762, 695, 1759, 817, 2062, 825, 2084, 1128, 2231, 1134, 2087, 1187, 2259.78, 1973.25, 2077, 1268, 2087, 1473, 2091.56, 1795.55, 1779, 1796, 1770, 2109, 1937.27, 2109, 1957, 2279, 1589, 2279, 1626, 2938, 1889, 2927, 1917, 2613, 2096, 2613, 2118, 2918, 2412, 2930, 2429, 3043, 2560, 3043, 2576, 2910, 2766.08, 2912.57, 2789, 3102, 3009, 3077, 3071.72, 2916.71, 3560.87, 2923.34, 3606, 3091, 3804, 3077, 3855.05, 2927.32, 4005.3, 2929.35, 4023.34, 3399.45, 3685, 3407, 3693, 3571, 4030, 3573, 4444, 2946, 4172, 2003, 2586, 1762, 2051, 648, 1708, 455, 1256, 489, 625, 511, 370, 998, 433, 1796, 517, 2638, 483, 3428, 2913, 3925, 3366, 4036, 3807, 3832, 3747, 3583 )

[node name="Bibliotecario2" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="Bibliotecária2" type="Sprite" parent="Bibliotecario2"]
position = Vector2( 787, 3091 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="IconeE(2)" type="Sprite" parent="Bibliotecario2"]
position = Vector2( 793, 2905 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bibliotecario2"]
polygon = PoolVector2Array( 677, 2844, 782.83, 2844, 1187, 2851, 1215, 3267, 677, 3243 )

[node name="Bibliotecário1" type="Area2D" parent="Bibliotecario2"]
position = Vector2( 3299.5, 3714 )
script = ExtResource( 12 )

[node name="Bibliotecário1Personagem" type="Sprite" parent="Bibliotecario2/Bibliotecário1"]
position = Vector2( -1628.5, -1741 )
scale = Vector2( 0.7, 0.8 )
texture = ExtResource( 9 )

[node name="IconeE" type="Sprite" parent="Bibliotecario2/Bibliotecário1"]
position = Vector2( -1622.5, -1920 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bibliotecario2/Bibliotecário1"]
position = Vector2( -51.5, 52 )
polygon = PoolVector2Array( -1942, -2092, -1955, -1523, -1368, -1525, -1362, -2100 )

[node name="Player" parent="Bibliotecario2/Bibliotecário1" instance=ExtResource( 7 )]
position = Vector2( 36.5, -291 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ButtonComputer" to="." method="_on_ButtonComputer_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
