[gd_scene load_steps=8 format=2]

[ext_resource path="res://Biblioteca/sala de aula fundo.jpg" type="Texture" id=1]
[ext_resource path="res://Biblioteca/BotaoÁreaDeTrabalho.png" type="Texture" id=2]
[ext_resource path="res://Biblioteca/BotaoCarreira.png" type="Texture" id=3]
[ext_resource path="res://Biblioteca/BotaoUniversidade.png" type="Texture" id=4]
[ext_resource path="res://Biblioteca/BotaoInstagram.png" type="Texture" id=5]
[ext_resource path="res://Biblioteca/fecharbotao-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Node2D.gd" type="Script" id=7]

[node name="Node2D" type="Node2D"]
position = Vector2( -92, -131 )
scale = Vector2( 2.59105, 2.25945 )
script = ExtResource( 7 )

[node name="SalaDeAulaFundo" type="Sprite" parent="."]
position = Vector2( 405, 296 )
scale = Vector2( 1.59848, 1.37355 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.164706, 0.964706, 1, 1 )
margin_left = 298.0
margin_top = 140.0
margin_right = 767.0
margin_bottom = 365.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 242.0
margin_top = 323.0
margin_right = 826.0
margin_bottom = 354.0
text = "OS.shell_open(\"https://www.instagram.com/acientistadedados/?utm_medium=copy_link\")"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUnivSI" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 338.0
margin_top = 205.0
margin_right = 724.0
margin_bottom = 244.0
text = "https://www.inteli.edu.br/sistemas-de-informacao/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAreaTrab" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 392.0
margin_top = 267.0
margin_right = 662.0
margin_bottom = 299.0
text = "https://www.infojobs.com.br/vagas-de-emprego-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCarreiraSI" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 362.0
margin_top = 152.0
margin_right = 684.0
margin_bottom = 182.0
text = "https://www.youtube.com/watch?v=cPLJ-hV1oxU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoCarreira" type="Sprite" parent="."]
position = Vector2( 525, 168 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 3 )

[node name="BotaoUniversidade" type="Sprite" parent="."]
position = Vector2( 530, 187 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 4 )

[node name="BotaoáreaDeTrabalho" type="Sprite" parent="."]
position = Vector2( 534, 290 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 2 )

[node name="BotaoInstagram" type="Sprite" parent="."]
position = Vector2( 534, 346 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 5 )

[node name="ButtonVoltarSI" type="Button" parent="."]
margin_left = 727.0
margin_top = 93.0
margin_right = 760.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fecharbotao-removebg-preview" type="Sprite" parent="."]
position = Vector2( 745, 109 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ButtonUnivSI" to="." method="_on_ButtonUnivSI_pressed"]
[connection signal="pressed" from="ButtonAreaTrab" to="." method="_on_ButtonAreaTrab_pressed"]
[connection signal="pressed" from="ButtonCarreiraSI" to="." method="_on_ButtonCarreiraSI_pressed"]
[connection signal="pressed" from="ButtonVoltarSI" to="." method="_on_ButtonVoltarSI_pressed"]
